methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:35: error: method faireMotif overrides nothing
override def faireMotif() {
             ^